파일 업데이트

--- a/html/가이드.html
+++ b/html/가이드.html
@@ -59,17 +59,17 @@
     <div class="swiper_wrap type01">
       <div class="swiper mySwiper ad_mid_banner">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><a href="#"><img src="img/common/banner/img_mid_full_banner.png" alt=""></a></div>
-          <div class="swiper-slide"><a href="#"><img src="img/common/banner/img_mid_full_banner.png" alt=""></a></div>
-          <div class="swiper-slide"><a href="#"><img src="img/common/banner/img_mid_full_banner.png" alt=""></a></div>
-          <div class="swiper-slide"><a href="#"><img src="img/common/banner/img_mid_full_banner.png" alt=""></a></div>
+          <div class="swiper-slide"><a href="#"><img src="img/pc/banner/banner_01.png" alt=""></a></div>
+          <div class="swiper-slide"><a href="#"><img src="img/pc/banner/banner_01.png" alt=""></a></div>
+          <div class="swiper-slide"><a href="#"><img src="img/pc/banner/banner_01.png" alt=""></a></div>
+          <div class="swiper-slide"><a href="#"><img src="img/pc/banner/banner_01.png" alt=""></a></div>
         </div>
-        <div class="swiper-button-next"><img src="img/common/btn_right.png" alt=""></div>
-        <div class="swiper-button-prev"><img src="img/common/btn_left.png" alt=""></div>
+        <div class="swiper-button-next"><img src="img/pc/swiper/btn_right.png" alt=""></div>
+        <div class="swiper-button-prev"><img src="img/pc/swiper/btn_left.png" alt=""></div>
         <div class="swiper-pagination type01"></div>
         <div class="swiper-autoplay-button">
-          <img src="img/common/btn_pause.png" alt="" class="pause">
-          <img src="img/common/btn_play.png" alt="" class="play">
+          <img src="img/pc/swiper/btn_pause.png" alt="" class="pause">
+          <img src="img/pc/swiper/btn_play.png" alt="" class="play">
         </div>
       </div>
       <script>
