--- a/html/조사목록.html
+++ b/html/조사목록.html
@@ -129,7 +129,7 @@
 
     <div class="content_wrap">
       <div class="inner">
-        <div class="top_info_box">
+        <div class="top_info_box pc">
           <div class="left_cont">
             <span class="total">총 <strong>11,994</strong>건</span>
             <a href="#none" class="btn ico_check_02"><span>사무로 재요청</span></a>
@@ -143,179 +143,191 @@
             <a href="#none" class="btn ico_download"><span>엑셀 다운로드</span></a>
           </div>
         </div>
+
+        <div class="top_info_box mo">
+          <div class="btn_cont">
+            <span><a href="#none" class="btn type02 ico_check_02"><span>사무로 재요청</span></a></span>
+            <span><a href="#none" class="btn type02 ico_check_03"><span>비사무로 재요청</span></a></span>
+            <span><a href="#none" class="btn type02 ico_upload"><span>엑셀 업로드</span></a></span>
+            <span><a href="#none" class="btn type02 ico_download"><span>엑셀 다운로드</span></a></span>
+          </div>
+          <span class="total">총 <strong>11,994</strong>건</span>
+        </div>
         <!-- table -->
-        <table>
-          <colgroup>
-            <col style="width:5%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-            <col style="width:1%;">
-            <col style="width:6%;">
-            <col style="width:1%;">
-            <col style="width:6%;">
-            <col style="width:1%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-            <col style="width:4%;">
-            <col style="width:3%;">
-            <col>
-            <col style="width:4%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-            <col style="width:6%;">
-          </colgroup>
-          <thead>
-            <tr>
-              <th rowspan="3">선택</th>
-              <th rowspan="3">소관부처</th>
-              <th rowspan="3">법 분야</th>
-              <th rowspan="3">법령명</th>
-              <th colspan="8">법령분류</th>
-              <th rowspan="3">사무명</th>
-              <th rowspan="3">사무구분</th>
-              <th rowspan="3">사무주체</th>
-              <th rowspan="3">사무유형</th>
-              <th rowspan="3">세부사무<br>유형</th>
-              <th rowspan="3">위임사무<br>여부</th>
-              <th rowspan="3">세부사무<br>유형</th>
-              <th rowspan="3">위임사무<br>여부</th>
-              <th rowspan="3">검토</th>
-            </tr>
-            <tr class="color_gray">
-              <th colspan="2">대분류</th>
-              <th colspan="2">중분류</th>
-              <th colspan="2">소분류</th>
-              <th>세분류</th>
-              <th rowspan="2">호</th>
-            </tr>
-            <tr class="color_gray">
-              <th colspan="2">장</th>
-              <th colspan="2">절</th>
-              <th colspan="2">조</th>
-              <th>행</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <label class="input_type check only">
-                  <input type="checkbox" name="q01">
-                  <span class="txt"></span>
-                </label>
-              </td>
-              <td>농림축산부</td>
-              <td>24농업 농지</td>
-              <td>농지보호법</td>
-              <td>4</td>
-              <td>국가 지정 농지보호</td>
-              <td>2</td>
-              <td>보존관리</td>
-              <td>1</td>
-              <td>허가사항</td>
-              <td>1</td>
-              <td>-</td>
-              <td>농업진흥 지역 해제</td>
-              <td>사무</td>
-              <td>농림축산 식품부</td>
-              <td>국가</td>
-              <td>국가 직접사무</td>
-              <td>X</td>
-              <td>X</td>
-              <td>X</td>
-              <td>대기중</td>
-            </tr>
-            <tr>
-              <td>
-                <label class="input_type check only">
-                  <input type="checkbox" name="q01">
-                  <span class="txt"></span>
-                </label>
-              </td>
-              <td>농림축산부</td>
-              <td>24농업 농지</td>
-              <td>농지보호법</td>
-              <td>4</td>
-              <td>국가 지정 농지보호</td>
-              <td>2</td>
-              <td>보존관리</td>
-              <td>1</td>
-              <td>허가사항</td>
-              <td>1</td>
-              <td>-</td>
-              <td>농업진흥 지역 해제</td>
-              <td>사무</td>
-              <td>농림축산 식품부</td>
-              <td>국가</td>
-              <td>국가 직접사무</td>
-              <td>X</td>
-              <td>X</td>
-              <td>X</td>
-              <td>대기중</td>
-            </tr>
-            <tr>
-              <td>
-                <label class="input_type check only">
-                  <input type="checkbox" name="q01">
-                  <span class="txt"></span>
-                </label>
-              </td>
-              <td>농림축산부</td>
-              <td>24농업 농지</td>
-              <td>농지보호법</td>
-              <td>4</td>
-              <td>국가 지정 농지보호</td>
-              <td>2</td>
-              <td>보존관리</td>
-              <td>1</td>
-              <td>허가사항</td>
-              <td>1</td>
-              <td>-</td>
-              <td>농업진흥 지역 해제</td>
-              <td>사무</td>
-              <td>농림축산 식품부</td>
-              <td>국가</td>
-              <td>국가 직접사무</td>
-              <td>X</td>
-              <td>X</td>
-              <td>X</td>
-              <td>대기중</td>
-            </tr>
-            <tr class="change">
-              <td>
-                <label class="input_type check only">
-                  <input type="checkbox" name="q01">
-                  <span class="txt"></span>
-                </label>
-              </td>
-              <td>농림축산부</td>
-              <td>24농업 농지</td>
-              <td>농지보호법</td>
-              <td>4</td>
-              <td>국가 지정 농지보호</td>
-              <td>2</td>
-              <td>보존관리</td>
-              <td>1</td>
-              <td>허가사항</td>
-              <td>1</td>
-              <td>-</td>
-              <td>농업진흥 지역 해제</td>
-              <td>사무</td>
-              <td>농림축산 식품부</td>
-              <td>국가</td>
-              <td>국가 직접사무</td>
-              <td>X</td>
-              <td>X</td>
-              <td>X</td>
-              <td>대기중</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table_cont">
+          <table>
+            <colgroup>
+              <col style="width:5%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:1%;">
+              <col style="width:6%;">
+              <col style="width:1%;">
+              <col style="width:6%;">
+              <col style="width:1%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:4%;">
+              <col style="width:3%;">
+              <col>
+              <col style="width:4%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+            </colgroup>
+            <thead>
+              <tr>
+                <th rowspan="3">선택</th>
+                <th rowspan="3">소관부처</th>
+                <th rowspan="3">법 분야</th>
+                <th rowspan="3">법령명</th>
+                <th colspan="8">법령분류</th>
+                <th rowspan="3">사무명</th>
+                <th rowspan="3">사무구분</th>
+                <th rowspan="3">사무주체</th>
+                <th rowspan="3">사무유형</th>
+                <th rowspan="3">세부사무<br>유형</th>
+                <th rowspan="3">위임사무<br>여부</th>
+                <th rowspan="3">세부사무<br>유형</th>
+                <th rowspan="3">위임사무<br>여부</th>
+                <th rowspan="3">검토</th>
+              </tr>
+              <tr class="color_gray">
+                <th colspan="2">대분류</th>
+                <th colspan="2">중분류</th>
+                <th colspan="2">소분류</th>
+                <th>세분류</th>
+                <th rowspan="2">호</th>
+              </tr>
+              <tr class="color_gray">
+                <th colspan="2">장</th>
+                <th colspan="2">절</th>
+                <th colspan="2">조</th>
+                <th>행</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <td>대기중</td>
+              </tr>
+              <tr>
+                <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <td>대기중</td>
+              </tr>
+              <tr>
+                <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <td>대기중</td>
+              </tr>
+              <tr class="change">
+                <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td>
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <td>대기중</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
         <!-- paging -->
-        <div class="paging">
+        <div class="paging pc">
           <a href="#none" class="prev"></a>
           <ol>
             <li><a href="#none" class="on">1</a></li>
@@ -328,6 +340,20 @@
             <li><a href="#none">8</a></li>
             <li><a href="#none">9</a></li>
             <li><a href="#none">10</a></li>
+          </ol>
+          <a href="#none" class="next"></a>
+        </div>
+
+        <!-- paging -->
+        <div class="paging mo">
+          <a href="#none" class="prev"></a>
+          <ol>
+            <li><a href="#none" class="on">1</a></li>
+            <li><a href="#none">2</a></li>
+            <li><a href="#none">3</a></li>
+            <li><a href="#none">4</a></li>
+            <li><a href="#none">5</a></li>
+            <li><a href="#none">6</a></li>
           </ol>
           <a href="#none" class="next"></a>
         </div>
@@ -377,7 +403,7 @@
           <span class="bar">본관 : (30112) 세종특별자치시 도움6로 42(어진동)</span>
           <span>별관 : (30116) 세존특별자치시 가름로 143(어진동)</span>
         </address>
-        <div class="info_num_box">
+        <div class="info_num_box pc">
           <p>
             <span class="tit bar">정부민원안내콜센터</span>
             <strong class="txt">국번없이 110</strong>
@@ -391,6 +417,27 @@
             <strong class="txt">044-204-8911</strong>
           </p>
           <p>
+          </p>
+          <p>
+            <span class="s_txt">(근무시간 외) 당직실 : 044-205-1600</span>
+          </p>
+        </div>
+        <div class="info_num_box mo">
+          <p>
+            <span class="tit bar">정부민원안내콜센터</span>
+            <strong class="txt">국번없이 110</strong>
+            <span class="s_txt">(무료)</span>
+          </p>
+          <p>
+            <span class="tit bar">행정안전부 콜센터</span>
+            <strong class="txt">02-2100-3399</strong>
+          </p>
+          <p style="margin-top:8px;">
+            <span class="s_txt">(월~금 9:00~18:00, 공휴일 제외, 유료)</span>
+          </p>
+          <p>
+            <span class="tit">팩스</span>
+            <strong class="txt">044-204-8911</strong>
           </p>
           <p>
             <span class="s_txt">(근무시간 외) 당직실 : 044-205-1600</span>
