--- a/html/사무1_리스트.html
+++ b/html/사무1_리스트.html
@@ -34,6 +34,13 @@
           <li><a href="#none">대국민 포털관리</a></li>
           <li><a href="#none">시스템 관리</a></li>
         </ul>
+        <!-- 로그인/회원가입 버튼 -->
+        <div class="info_cont" style="display: none;">
+          <span class="bar"><a href="#none" class="ico_login"><span>로그인</span></a></span>
+          <span><a href="#none" class="ico_join"><span>회원가입</span></a></span>
+        </div>
+
+        <!-- 마이페이지/사용자/로그아웃 -->
         <div class="info_cont">
           <ul class="info_menu">
             <li class="bar"><a href="#none">마이페이지</a></li>
@@ -57,6 +64,7 @@
           <a href="#none">홈</a>
           <a href="#none">사무</a>
         </div>
+        <a href="#none" class="btn ico_print"><span>프린트</span></a>
         <h2 class="title">사무</h2>
         <div class="search_cont">
           <span class="search_box">
@@ -74,21 +82,45 @@
         <!-- 상세검색 화면 -->
         <div class="search_cont_detail on">
           <div class="cont">
-            <select name="" id="">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-            </select>
-            <select name="" id="">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-            </select>
-            <select name="" id="">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-            </select>
+            <!-- select_box -->
+            <div class="select_box" style="min-width:200px;">
+              <span class="select">선택함</span>
+              <div class="option">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                  <ul>
+                    <li>선택함1</li>
+                    <li>선택함2</li>
+                    <li>선택함3</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- select_box -->
+            <div class="select_box" style="min-width:200px;">
+              <span class="select">선택함</span>
+              <div class="option">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                  <ul>
+                    <li>선택함1</li>
+                    <li>선택함2</li>
+                    <li>선택함3</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- select_box -->
+            <div class="select_box" style="min-width:200px;">
+              <span class="select">선택함</span>
+              <div class="option">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                  <ul>
+                    <li>선택함1</li>
+                    <li>선택함2</li>
+                    <li>선택함3</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
           <button class="btn_close"></button>
         </div>
@@ -97,37 +129,200 @@
 
     <div class="content_wrap">
       <div class="inner">
-        <div class="top_info_box">
+        <div class="top_info_box pc">
           <div class="left_cont">
             <span class="total">총 <strong>11,994</strong>건</span>
           </div>
-          <div class="right_cont">
+          <div class="right_cont">            
             <a href="#none" class="btn ico_upload"><span>엑셀 업로드</span></a>
             <a href="#none" class="btn ico_download"><span>엑셀 다운로드</span></a>
           </div>
         </div>
+
+        <div class="top_info_box mo">
+          <div class="btn_cont">
+            <span><a href="#none" class="btn type02 ico_check_02"><span>사무로 재요청</span></a></span>
+            <span><a href="#none" class="btn type02 ico_check_03"><span>비사무로 재요청</span></a></span>
+            <span><a href="#none" class="btn type02 ico_upload"><span>엑셀 업로드</span></a></span>
+            <span><a href="#none" class="btn type02 ico_download"><span>엑셀 다운로드</span></a></span>
+          </div>
+          <span class="total">총 <strong>11,994</strong>건</span>
+        </div>
         <!-- table -->
-        <table>
-          <colgroup>
-            <col style="width:10%;">
-            <col>
-          </colgroup>
-          <thead>
-            <tr>
-              <th>sdf</th>
-              <th>sdf</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>sdf</td>
-              <td>sdf</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table_cont">
+          <table>
+            <colgroup>
+              <!-- <col style="width:5%;"> -->  
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:1%;">
+              <col style="width:6%;">
+              <col style="width:1%;">
+              <col style="width:6%;">
+              <col style="width:1%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:4%;">
+              <col style="width:3%;">
+              <col>
+              <col style="width:4%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <col style="width:6%;">
+              <!-- <col style="width:6%;"> -->
+            </colgroup>
+            <thead>
+              <tr>
+                <!-- <th rowspan="3">선택</th> -->
+                <th rowspan="3">소관부처</th>
+                <th rowspan="3">법 분야</th>
+                <th rowspan="3">법령명</th>
+                <th colspan="8">법령분류</th>
+                <th rowspan="3">사무명</th>
+                <th rowspan="3">사무구분</th>
+                <th rowspan="3">사무주체</th>
+                <th rowspan="3">사무유형</th>
+                <th rowspan="3">세부사무<br>유형</th>
+                <th rowspan="3">위임사무<br>여부</th>
+                <th rowspan="3">세부사무<br>유형</th>
+                <th rowspan="3">위임사무<br>여부</th>
+                <!-- <th rowspan="3">검토</th> -->
+              </tr>
+              <tr class="color_gray">
+                <th colspan="2">대분류</th>
+                <th colspan="2">중분류</th>
+                <th colspan="2">소분류</th>
+                <th>세분류</th>
+                <th rowspan="2">호</th>
+              </tr>
+              <tr class="color_gray">
+                <th colspan="2">장</th>
+                <th colspan="2">절</th>
+                <th colspan="2">조</th>
+                <th>행</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <!-- <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td> -->
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <!-- <td>대기중</td> -->
+              </tr>
+              <tr>
+                <!-- <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td> -->
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <!-- <td>대기중</td> -->
+              </tr>
+              <tr>
+                <!-- <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td> -->
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <!-- <td>대기중</td> -->
+              </tr>
+              <tr class="change">
+                <!-- <td>
+                  <label class="input_type check only">
+                    <input type="checkbox" name="q01">
+                    <span class="txt"></span>
+                  </label>
+                </td> -->
+                <td>농림축산부</td>
+                <td>24농업 농지</td>
+                <td>농지보호법</td>
+                <td>4</td>
+                <td>국가 지정 농지보호</td>
+                <td>2</td>
+                <td>보존관리</td>
+                <td>1</td>
+                <td>허가사항</td>
+                <td>1</td>
+                <td>-</td>
+                <td>농업진흥 지역 해제</td>
+                <td>사무</td>
+                <td>농림축산 식품부</td>
+                <td>국가</td>
+                <td>국가 직접사무</td>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+                <!-- <td>대기중</td> -->
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
         <!-- paging -->
-        <div class="paging">
+        <div class="paging pc">
           <a href="#none" class="prev"></a>
           <ol>
             <li><a href="#none" class="on">1</a></li>
@@ -143,6 +338,20 @@
           </ol>
           <a href="#none" class="next"></a>
         </div>
+
+        <!-- paging -->
+        <div class="paging mo">
+          <a href="#none" class="prev"></a>
+          <ol>
+            <li><a href="#none" class="on">1</a></li>
+            <li><a href="#none">2</a></li>
+            <li><a href="#none">3</a></li>
+            <li><a href="#none">4</a></li>
+            <li><a href="#none">5</a></li>
+            <li><a href="#none">6</a></li>
+          </ol>
+          <a href="#none" class="next"></a>
+        </div>
       </div>
     </div>
   </div>
@@ -150,15 +359,89 @@
   <!-- footer -->
   <div class="footer">
     <div class="inner">
-      footer
-      <address>address</address>
+      <div class="top_info float_box">
+        <div class="left_cont">
+          <a href="#none" class="bar">이용약관</a>
+          <a href="#none" class="point">개인정보처리방침</a>
+        </div>
+        <div class="right_cont">
+          <!-- select_box -->
+          <div class="select_box type02" style="min-width:240px;">
+            <span class="select">소속기관 누리집 바로가기</span>
+            <div class="option">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                <ul>
+                  <li>선택함1</li>
+                  <li>선택함2</li>
+                  <li>선택함3</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- select_box -->
+          <div class="select_box type02" style="min-width:240px;">
+            <span class="select">신하기관 누리집 바로가기</span>
+            <div class="option">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                <ul>
+                  <li>선택함1</li>
+                  <li>선택함2</li>
+                  <li>선택함3</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="info_box">
+        <address>
+          <span class="bar">본관 : (30112) 세종특별자치시 도움6로 42(어진동)</span>
+          <span>별관 : (30116) 세존특별자치시 가름로 143(어진동)</span>
+        </address>
+        <div class="info_num_box pc">
+          <p>
+            <span class="tit bar">정부민원안내콜센터</span>
+            <strong class="txt">국번없이 110</strong>
+            <span class="s_txt">(무료)</span>
+          </p>
+          <p>
+            <span class="tit bar">행정안전부 콜센터</span>
+            <strong class="txt">02-2100-3399</strong>
+            <span class="s_txt bar">(월~금 9:00~18:00, 공휴일 제외, 유료)</span>
+            <span class="tit">팩스</span>
+            <strong class="txt">044-204-8911</strong>
+          </p>
+          <p>
+          </p>
+          <p>
+            <span class="s_txt">(근무시간 외) 당직실 : 044-205-1600</span>
+          </p>
+        </div>
+        <div class="info_num_box mo">
+          <p>
+            <span class="tit bar">정부민원안내콜센터</span>
+            <strong class="txt">국번없이 110</strong>
+            <span class="s_txt">(무료)</span>
+          </p>
+          <p>
+            <span class="tit bar">행정안전부 콜센터</span>
+            <strong class="txt">02-2100-3399</strong>
+          </p>
+          <p style="margin-top:8px;">
+            <span class="s_txt">(월~금 9:00~18:00, 공휴일 제외, 유료)</span>
+          </p>
+          <p>
+            <span class="tit">팩스</span>
+            <strong class="txt">044-204-8911</strong>
+          </p>
+          <p>
+            <span class="s_txt">(근무시간 외) 당직실 : 044-205-1600</span>
+          </p>
+        </div>
+        <p class="copy">ⓒ Ministry of the Interior and Safety. All rights reserved.</p>
+      </div>
     </div>
   </div>
 </div>
 </body>
 </html>
-
-
-
-
-
