--- a/html/사무1_상세_관리자.html
+++ b/html/사무1_상세_관리자.html
@@ -520,8 +520,112 @@
             </div>
             <div class="modal_n_body">
               <div class="pop_cont">
-                테스트
+                  <div class="document-title-ft18">
+                      개정된 법령
+                  </div>
+                  <div class="table-cont">
+                      <table>
+                          <colgroup>
+                            <col width="40" />
+                            <col width="40" />
+                            <col width="40" />
+                            <col width="240" />
+                            <col width="80" />
+                            <col width="" />                                                        
+                          </colgroup>
+                          <thead>
+                              <tr>
+                                  <th scope="col" colspan="3">장번호</th>
+                                  <th scope="col">장제목</th>
+                                  <th scope="col">절번호</th>
+                                  <th scope="col">절제목</th>
+                              </tr>
+                              <tr>
+                                <th scope="col">조</th>
+                                <th scope="col">항</th>
+                                <th scope="col">호</th>
+                                <th scope="col">조문제목</th>                                
+                                <th scope="col" colspan="2">조문</th>                              
+                          </thead>
+                          <tbody>
+                              <tr>
+                                  <td colspan="3">7</td>
+                                  <td class="text-l">개인정보 분쟁조정위원회</td>
+                                  <td></td>
+                                  <td></td>
+                              </tr>
+                              <tr>
+                                  <td>6</td>
+                                  <td>1</td>
+                                  <td>0</td>
+                                  <td>집단분쟁조정</td>
+                                  <td colspan="2">제1조(목적) 이 법은 10ㆍ27법난과 관련하여 피해를 입은 사람과 불교계의 명예를 회복시켜줌으로써 인권신장과 국민화합에 이바지함을 목적으로 한다. <개정 2022. 8. 8.></td>
+                              </tr>
+                              <tr>
+                                  <td colspan="3">재개정 구분</td>
+                                  <td colspan="3" class="text-l">일부개정</td>
+                              </tr>
+                              <tr>
+                                <td colspan="3">시행일</td>
+                                <td colspan="3" class="text-l">2023.11.12</td>
+                              </tr>                                                                                    
+                          </tbody>
+                      </table>
+                  </div>
+                  <div class="document-title-ft18 mt-32">
+                    개정이전 법령
+                  </div>   
+                  <div class="table-cont mt-16">
+                      <table>
+                          <colgroup>
+                            <col width="40" />
+                            <col width="40" />
+                            <col width="40" />
+                            <col width="240" />
+                            <col width="80" />
+                            <col width="" />                                                        
+                          </colgroup>
+                          <thead>
+                              <tr>
+                                  <th scope="col" colspan="3">장번호</th>
+                                  <th scope="col">장제목</th>
+                                  <th scope="col">절번호</th>
+                                  <th scope="col">절제목</th>
+                              </tr>
+                              <tr>
+                                <th scope="col">조</th>
+                                <th scope="col">항</th>
+                                <th scope="col">호</th>
+                                <th scope="col">조문제목</th>                                
+                                <th scope="col" colspan="2">조문</th>                              
+                          </thead>
+                          <tbody>
+                              <tr>
+                                  <td colspan="3">7</td>
+                                  <td class="text-l">개인정보 분쟁조정위원회</td>
+                                  <td></td>
+                                  <td></td>
+                              </tr>
+                              <tr>
+                                  <td>6</td>
+                                  <td>1</td>
+                                  <td>0</td>
+                                  <td>집단분쟁조정</td>
+                                  <td colspan="2">제1조(목적) 이 법은 10ㆍ27법난과 관련하여 피해를 입은 사람과 불교계의 명예를 회복시켜줌으로써 인권신장과 국민화합에 이바지함을 목적으로 한다. <개정 2022. 8. 8.></td>
+                              </tr>
+                              <tr>
+                                  <td colspan="3">재개정 구분</td>
+                                  <td colspan="3" class="text-l">일부개정</td>
+                              </tr>
+                              <tr>
+                                <td colspan="3">시행일</td>
+                                <td colspan="3" class="text-l">2023.11.12</td>
+                              </tr>                                                                                    
+                          </tbody>
+                      </table>
+                  </div>                                 
               </div>
+              
               <button type="button" onclick="modalControl('c')" class="btn_close"><span class="hidden">닫기</span></button>
             </div>
           </div>
